modify readme for repo

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
+<%= link_to "About", about_path %>
     <meta name="author" content="">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon.icon.png">
 	<link rel="manifest" href="/manifest.json">
@@ -21,7 +22,6 @@
 
     <!-- Custom styles for this template -->
     <link href="jumbotron.css" rel="stylesheet">
-<%= link_to "About" about_path %>
 
 	<style>
 
